Refactor HTTP_PULL format usage to use format method and add tests for HTTP_PUSH transfers